[gd_scene load_steps=29 format=2]

[ext_resource path="res://Main game/Scenes/Custom controls/Custom button.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main game/Scripts/Settings.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/flappyfont.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://assets/textures/BowserRotating.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=24]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 30, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 60, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 90, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 120, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 150, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 180, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 210, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 240, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 270, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 300, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 330, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 360, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 390, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 420, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 450, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 480, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 510, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 540, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 570, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 600, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 630, 0, 30, 32 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="Settings" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -15.0
margin_top = -15.0
margin_right = 499.0
margin_bottom = 871.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" parent="." instance=ExtResource( 1 )]
margin_left = 186.0
margin_top = 665.0
margin_right = 309.0
margin_bottom = 700.0
text = "BACK"

[node name="MusicButton" type="CheckButton" parent="."]
margin_left = 357.0
margin_top = 140.0
margin_right = 433.0
margin_bottom = 189.0
pressed = true
action_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="Label" parent="."]
margin_left = 95.0
margin_top = 148.0
margin_right = 185.0
margin_bottom = 181.0
custom_fonts/font = SubResource( 24 )
text = "SOUND"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bowser" type="AnimatedSprite" parent="."]
position = Vector2( 252, 436 )
scale = Vector2( 5, 5 )
frames = SubResource( 1 )
frame = 20

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="toggled" from="MusicButton" to="." method="_on_MusicButton_toggled"]
